Tarefa com virtual thread - ficou mais lento mesmo com semaphore